# nid-application-system-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  (+5 more)
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  nidapplicationsystem_sdk.py  nidapplicationsystem_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  helpers.py  operation.py  response.py  spec.py  utility_type.py
py/entity/: application_entity.py  application_status_entity.py  login_entity.py  nid_management_entity.py  registration_entity.py  success_entity.py
py/feature/: audit_feature.py  base_feature.py  idempotency_feature.py  metrics_feature.py  paging_feature.py  rbac_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py
py/test/: runner.py  test_application_entity.py  test_application_status_direct.py  test_application_status_entity.py  test_exists.py  test_login_entity.py  test_netsim.py  test_nid_management_direct.py  test_nid_management_entity.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_registration_entity.py  test_success_entity.py
py/utility/: clean.py  done.py  feature_add.py  make_error.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_body.py  prepare_path.py  register.py  result_body.py
(+501 files in other folders)
