[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voxgig-sdk-nid-application-system"
version = "0.0.1"
description = "Unofficial generated Python SDK for the NID Application System public API. Not affiliated with or endorsed by the upstream API provider."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["voxgig", "sdk", "generated-sdk", "openapi", "api-client", "nid-application-system"]
dependencies = [
    "requests>=2.33",
]

[project.urls]
Homepage = "https://github.com/voxgig-sdk/nid-application-system-sdk"
Repository = "https://github.com/voxgig-sdk/nid-application-system-sdk"
Issues = "https://github.com/voxgig-sdk/nid-application-system-sdk/issues"

# Ship the top-level single-file modules (setuptools find only discovers
# package dirs, never these) so the documented import actually installs.
# nidapplicationsystem_types holds the generated @dataclass models.
[tool.setuptools]
py-modules = ["nidapplicationsystem_sdk", "nidapplicationsystem_types", "config", "features"]

# Explicit package list — setuptools auto-discovery refuses to pick when
# multiple top-level dirs (core/entity/feature/utility) are present.
[tool.setuptools.packages.find]
include = ["core*", "entity*", "feature*", "utility*"]

# Ship the PEP 561 py.typed marker(s) so the inline type hints reach consumers.
[tool.setuptools.package-data]
"*" = ["py.typed"]
